# invo-service

./: Dockerfile  compose.yml  pyproject.toml
.github/workflows/: release.yml
src/invo_service/: service.py
