[project]
name = "invo-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Blum",email = "n.blum@student.tudelft.nl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lib-ftep (>=1.1.1,<2.0.0)",
    "lib-mail (>=0.1.5,<0.2.0)",
    "lib-azure (>=1.0.8,<2.0.0)",
    "lib-invoice (>=0.1.3,<0.2.0)",
    "flask (>=3.1.1,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)",
]

[tool.poetry]
packages = [{include = "invo_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
